--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #F0F3FA;
+  height:100%
   
 }
 /* Sidebar  */
@@ -41,6 +42,7 @@ body {
 .navbar ul {
   padding: 30px 80px;
 }
+
 .navbar li:first-child::before {
   content: '';
   position: absolute;
@@ -52,6 +54,7 @@ body {
   top: 33px;
   border-radius: 4px;
 }
+
 .navbar li:first-child a::before{
   content: '';
   position: absolute;
@@ -117,6 +120,7 @@ body {
   top: 0;
 }
 .navbar li:nth-child(3):hover a::before{filter: brightness(0.9);}
+
 .log-setting {
   position: absolute;
   bottom: 20px;
@@ -151,8 +155,9 @@ body {
 /* Body  */
 .App {
   background-color: #F0F3FA;
+  
   width: 100%;
-  height: 100vh;
+  height: 100%;
 
 }
 .board {
